--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.541.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
